tutorials/studying/part-4/networking/tcp/minio/minio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: minio-gateway
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
  - port:
      name: tcp-minio
      number: 201
      protocol: TCP
    hosts:
    - '*'
